corrected blog article placement on homepage, and general spacing in css

--- a/work/Projects/Blog Posts/public/css/styles.css
+++ b/work/Projects/Blog Posts/public/css/styles.css
@@ -301,6 +301,46 @@ Primary Navigation style
   box-sizing: border-box;
 }
 
+#btnblog {
+  position: relative;
+  background-color: #FFC315;
+  border: none;
+  font-size: 22px;
+  color: #FFFFFF;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+#btnblog:after {
+  content: "";
+  background: #FFC315;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
+#btnblog:hover {
+  background-color: #4c4c4e;
+  color: #f2f2f2;
+}
+#btnblog:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
+
 #btn {
   position: relative;
   background-color: #FFC315;
